--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -134,10 +134,34 @@ button:focus {
 .loader {
   width: 48px;
   height: 48px;
-  border: 5px solid #fff;
-  border-bottom-color: transparent;
+  border: 1px solid #000000;
   border-radius: 50%;
   display: inline-block;
+  position: relative;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
+}
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #ff3d00;
+  width: 16px;
+  height: 16px;
+  transform: translate(-50%, 50%);
+  border-radius: 50%;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loader.hidden {
+  display: none;
 }
